# pyemg-cometa

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/pyemg_cometa/: capture_configuration.py  constants.py  daq_system.py  device_dependent_functionalities.py  event_args.py  foot_sw_transducer.py  sensor_configuration.py  version.py
