[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysio-pyemg-cometa"
dynamic = ["version"]
requires-python = ">=3.7,<3.14"
authors = [
  { name="Maxim Yudayev", email="maxim.yudayev@gmail.com" },
  { name="e-Media Research Lab @ KU Leuven" },
]
description = "A pythonic wrapper library for Cometa sEMG Waveplus devices"
keywords = ["wearables", "sensors", "surface electromyography", "cometa", "streaming", "sensing", "physiology"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Microsoft :: Windows",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "pythonnet"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyemg_cometa = ["lib/*.dll"]

[tool.setuptools]
platforms = ["win32", "win-amd64"]

[tool.setuptools.dynamic]
version = {attr = "pyemg_cometa.__version__.__version__"}

[project.urls]
Repository = "https://github.com/maximyudayev/pyemg-cometa.git"
Issues = "https://github.com/maximyudayev/pyemg-cometa/issues"
Changelog = "https://github.com/maximyudayev/pyemg-cometa/blob/main/CHANGELOG.md"
